--- a/scss/_custom-amp.scss
+++ b/scss/_custom-amp.scss
@@ -1,6 +1,7 @@
 // Bootstrap overrides for AMP
 //
-
+// Copy variables from `_variables.scss` to this file to override default values
+// without modifying source files.
 
 $grid-breakpoints: (
   xs: 0,
