--- a/scss/bootstrap-amp.scss
+++ b/scss/bootstrap-amp.scss
@@ -1,25 +1,66 @@
-// Bootstrap AMP project minimal
+/*!
+  * Bootstrap AMP project minimal
+  *
+  * Copyright 2011-2017 The Bootstrap Authors
+  * Copyright 2011-2017 Twitter, Inc.
+  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
+  */
 
+
+// Core variables
 @import "custom-amp";
 @import "custom";
 @import "variables";
+@import "mixins";
 
-//
-// Bootstrap AMP mixins
-//
-
-@import "mixins/breakpoints";
-@import "mixins/grid-framework";
-@import "mixins/grid";
-@import "mixins/hover";
-@import "mixins/background-variant";
-@import "mixins/box-shadow";
-@import "mixins/transition";
-@import "mixins/border-radius";
-@import "mixins/buttons";
-
+// Core CSS
+//@import "reboot";
+//@import "type";
+//@import "images";
+//@import "code";
 @import "grid";
+//@import "tables";
+//@import "forms";
 @import "buttons";
+
+
+// Components
+//@import "transitions";
+//@import "dropdown";
+//@import "button-group";
+//@import "input-group";
+//@import "custom-forms";
+//@import "nav";
 @import "navbar";
-@import "utilities/flex";
+//@import "card";
+//@import "breadcrumb";
+//@import "pagination";
+//@import "badge";
+//@import "jumbotron";
+//@import "alert";
+//@import "progress";
+//@import "media";
+//@import "list-group";
+//@import "responsive-embed";
+//@import "close";
+
+// Components w/ JavaScript
+//@import "modal";
+//@import "tooltip";
+//@import "popover";
+//@import "carousel";
+
+// Utility classes
+//@import "utilities/align";
 @import "utilities/background";
+//@import "utilities/borders";
+//@import "utilities/clearfix";
+//@import "utilities/display";
+//@import "utilities/flex";
+//@import "utilities/float";
+//@import "utilities/position";
+//@import "utilities/screenreaders";
+//@import "utilities/sizing";
+//@import "utilities/spacing";
+//@import "utilities/text";
+//@import "utilities/visibility";
